[package]
name = "polkahub"
version = "0.2.0"
authors = ["Aleks Gnatovskyi <aleks.work2222@gmail.com>"]
edition = "2018"

[dependencies]
structopt = "0.3.5"
serde_derive = "1.0.103"
serde = "1.0.103"
serde_json = "1.0.44"
reqwest = { version = "0.10.0-alpha.2", features =["json"] }
tokio = { version = "=0.2.0-alpha.6" }
circle-rs = "0.2.0"

[lib]
name="polkahub_lib"
path="src/lib.rs"

[[bin]]
name="polkahub"
path="src/main.rs"