[package]
name = "polkahub"
version = "0.2.2"
authors = ["Akropolis Decentralised Ltd., <team@akropolis.io>"]
edition = "2018"

description = "polkahub cli for easier blockchain deployment"
keywords = ["cli", "node", "polkadot", "tooling", "deploy"]
license = "MIT"
repository = "https://github.com/akropolisio/polkahub-cli"
homepage = "https://github.com/akropolisio/polkahub-cli"

[dependencies]
structopt = "0.3.5"
serde_derive = "1.0.103"
serde = "1.0.103"
serde_json = "1.0.44"
reqwest = { version = "0.10.0-alpha.2", features =["json"] }
tokio = { version = "=0.2.0-alpha.6" }
circle-rs = "0.2.0"
termion="1.5.3"
anyhow = "1.0"

[profile.dev]

