[package]
name = "polkahub"
version = "0.2.6"
authors = ["Akropolis Decentralised Ltd., <team@akropolis.io>"]
edition = "2018"

description = "polkahub cli for easier blockchain deployment"
keywords = ["cli", "node", "polkadot", "tooling", "deploy"]
license = "MIT"
repository = "https://github.com/akropolisio/polkahub-cli"
homepage = "https://github.com/akropolisio/polkahub-cli"

[dependencies]
structopt = "0.3.5"
serde_derive = "1.0.103"
serde = "1.0.103"
serde_json = "1.0.44"
reqwest = { version = "0.10.1", features = ["json"] }
tokio = { version = "0.2.9", features = ["fs", "macros"] }
circle-rs = "0.2.0"
termion="1.5.3"
anyhow = "1.0"
toml="0.5.5"
rpassword = "4.0.3"
lazy_static = "1.4.0"
regex = "1.3.3"

[profile.dev]

